--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;600;700&family=Nunito:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- 封面畫面 -->
+  <!-- 封面畫面 -->
   <div id="cover-screen" class="cover-screen">
     <div class="cover-inner">
       <div class="cover-card" id="cover-card">
         <div class="cover-card-title">追星收藏冊</div>
         <div class="cover-card-subtitle">
-          以「卡冊翻頁」方式整理我的專輯、小卡與周邊 💿✨
+          以「卡冊翻頁」方式收藏專輯、小卡與周邊 ✨
         </div>
       </div>
       <button id="enter-album-btn" class="primary-btn cover-btn">
@@ -24,7 +24,7 @@
       <div class="cover-hint">點封面或周圍空白處也可以進入喔</div>
     </div>
   </div>
-  
+
   <header class="top-bar">
     <div class="brand">
       <span class="brand-dot"></span>
