--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <div id="cover-screen" class="cover-screen">
     <div class="cover-inner">
       <div class="cover-card" id="cover-card">
-        <div class="cover-card-title">追星收藏冊</div>
+        <div class="cover-card-title">專屬卡冊</div>
         <div class="cover-card-subtitle">
-          以「卡冊翻頁」方式收藏專輯、小卡與周邊 ✨
+          收藏專輯、小卡與周邊特典 ✨
         </div>
       </div>
       <button id="enter-album-btn" class="primary-btn cover-btn">
